--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
-snake{
+.snake{
   background-color:black; 
   width: 25px;
   height: 25px
 }
 
-board{
+.board{
   width:500px;
   height: 500px;
   background-color: aqua
