--- a/main.css
+++ b/main.css
@@ -2,14 +2,14 @@
   background-color:black;
   border-radius: 50%; 
   width: 25px;
-  height: 25px
+  height: 25px;
 }
 
 .snakeHead{
   background-color:brown;
   border-radius: 50%;  
   width: 25px;
-  height: 25px
+  height: 25px;
 }
 
 .food{
